--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
 <nav>
     <h2 class="nav-title">Nu<span class="text-area">h</span>a</h2>
     <ul>
@@ -20,6 +20,17 @@
         <li><button  class="btn-primary">Hire Me</button></li>
     </ul>
 </nav>
+
+<div class="banner">
+    <div class="banner-content">
+        <h3 class="banner-gritting">Hi,I am</h3>
+        <h1 class="banner-title">Nusrat Nuha</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, enim! Dolorum hic nihil ut aspernatur ipsa ipsam, odio qui officia molestiae id labore tenetur .</p>
+        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary">Contact</button>
+    </div>
+    <img  class="profile-pic" src="imges.jpg" alt="">
+</div>
     </header>
     <main>
 
