--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="banner-content">
         <h3 class="banner-gritting">Hi,I am</h3>
         <h1 class="banner-title">Nusrat Nuha</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, enim! Dolorum hic nihil ut aspernatur ipsa ipsam, odio qui officia molestiae id labore tenetur .</p>
+        <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, enim! Dolorum hic nihil ut aspernatur ipsa ipsam, odio qui officia molestiae id labore tenetur .</p>
         <button class="btn-primary">Download CV</button>
         <button class="btn-primary">Contact</button>
     </div>
@@ -33,6 +33,10 @@
 </div>
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, am designer & developer with a passion for web design. I enjoy developing simple,clean and  slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me.Developing working whithin rime and badget with meets .</p>
+        </section>
 
     </main>
     <footer>
