added about information

--- a/index.html
+++ b/index.html
@@ -35,7 +35,43 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, am designer & developer with a passion for web design. I enjoy developing simple,clean and  slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me.Developing working whithin rime and badget with meets .</p>
+            <p class="section-description">I, am designer & developer with a passion for web design. I enjoy developing simple,clean and  slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me.Developing working whithin rime and badget with meets . ipsum dolor sit amet consectetur adipisicing elit. Modi obcaecati, neque reprehenderit sed temporibus delectus similique voluptas aspernatur fuga ex, quo quae repellendus ea! Accusamus asperiores excepturi facere et harum?</p>
+
+            <div class="about-info-container">
+              <!--.about-info*4>h4.info-title+p.info-description -->
+
+              <div class="about-info">
+                <h4 class="info-title">Name:</h4>
+                <p class="info-description">Nusrat Nuha</p>
+
+              </div>
+
+              <div class="about-info">
+                <h4 class="info-title">Email:</h4>
+                <p class="info-description">info@gmail.com</p>
+
+              </div>
+
+              <div class="about-info">
+                <h4 class="info-title">Date of birth:</h4>
+                <p class="info-description">4 october 2004</p>
+
+              </div>
+
+              <div class="about-info">
+                <h4 class="info-title">from:</h4>
+                <p class="info-description">Los Angeles,USA</p>
+
+              </div>
+
+
+
+
+
+
+
+
+            </div>
         </section>
 
     </main>
