added skills container

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 
             </div>
         </section>
+        <!--what I do section start-->
+        <section>
+            <h3 id="what-i-do-description" class="section-title">What I do</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat velit consectetur quasi tempora, necessitatibus reprehenderit ipsam quisquam nostrum totam ducimus, illo autem quidem eius veritatis quod molestias. Ipsum, quia repellendus. ipsum dolor sit amet consectetur adipisicing elit. Quidem dolore odio reprehenderit, numquam quas iste nemo sequi asperiores officiis at quae minus! Quam ea harum nobis eum architecto, et cum!</p>
+        </section>
 
     </main>
     <footer>
