--- a/index.html
+++ b/index.html
@@ -161,7 +161,12 @@
                 </div>
                 <div class="resume-colum-title"></div>
             </div>
+            
+            
         </section>
+        <div class="download-cv">
+            <button class="btn-primary">Download CV</button>
+        </div>
 
     </main>
     <footer>
