--- a/index.html
+++ b/index.html
@@ -170,6 +170,18 @@
 
     </main>
     <footer>
+        <div class="footer-colum">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">please fill out this section to contact with me or call between 9:00 A.M and 8:00 P.M ET,Monday through feiday.</p>
+            <div class="social-links">
+            <a href=""><img src="images (5).png" alt=""></a>
+            <a href=""><img src="images (3).jpeg" alt=""></a>
+            <a href=""><img src="images (6).png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-colum">
+            <h3 class="section-title">Lets Massage</h3>
+        </div>
 
     </footer>
 </body>
