--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
         </div>
         <div class="footer-colum">
             <h3 class="section-title">Lets Massage</h3>
+            <from class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="Email" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <input type="submit" value="Submit">
+            </from>
         </div>
 
     </footer>
