added font awesome icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/b2feb3d45e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -26,8 +27,10 @@
         <h3 class="banner-gritting">Hi,I am</h3>
         <h1 class="banner-title">Nusrat Nuha</h1>
         <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, enim! Dolorum hic nihil ut aspernatur ipsa ipsam, odio qui officia molestiae id labore tenetur .</p>
-        <button class="btn-primary">Download CV</button>
-        <button class="btn-primary">Contact</button>
+        <button class="btn-primary"><i class="fa-solid fa-download"></i> 
+            Download CV</button>
+        <button class="btn-primary"><i class="fa-solid fa-phone"></i>
+            Contact</button>
     </div>
     <img  class="profile-pic" src="imges.jpg" alt="">
 </div>
@@ -165,7 +168,8 @@
             
         </section>
         <div class="download-cv">
-            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i>
+                Download CV</button>
         </div>
 
     </main>
